# tcpb-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  bitbucket-pipelines.yml  configure  run_docker_tests.sh  run_pipeline.sh  run_pipeline_tests.sh
.github/workflows/: IntegrationTests.yml
api_examples/: CMakeLists.txt
api_examples/cpp/: Makefile  test_api.cpp
api_examples/fortran/: Makefile  test_api.F90
api_examples/python/: test_api.py
devtools/ci/jenkins/: Jenkinsfile  README.md
docs/: Doxyfile  Doxyfile-cpp
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  readme.doctree  tcpb.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  tcpb.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tcpb/: tcpb.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  tcpb.rst.txt
docs/_build/latex/: tcpb_client.aux  tcpb_client.fdb_latexmk  tcpb_client.fls  tcpb_client.idx  tcpb_client.out  tcpb_client.tex  tcpb_client.toc
examples/: CMakeLists.txt  Makefile  tc.template  tcpb-example.cpp
examples/api/: CMakeLists.txt
examples/api/cpp/: Makefile  terachem.inp  test_api.cpp
examples/api/cpp_openmm/: 2waters.prmtop  2waters.qmregion  Makefile  test_api.cpp
examples/api/fortran/: Makefile  test_api.F90
examples/api/fortran_openmm/: Makefile  terachem.inp  test_api.F90
examples/api/python/: test_api.py
examples/api/python_openmm/: test_api.py
examples/qm/: c2h4.xyz  tcpb-example.cpp
examples/qmmm/: Makefile  tc.template  tcpb-example.cpp
examples/use_api_from_fortran/: Makefile  test_api.F90
include/: terachem_server.pb.h
proto/: terachem_server.proto
pytcpb/: CMakeLists.txt  setup.py
pytcpb/pytcpb/: __init__.py
src/: CMakeLists.txt  api.cpp  api.h  client.cpp  client.h  constants.h  exceptions.cpp  exceptions.h  input.cpp  input.h  output.cpp  output.h  server.cpp  server.h  socket.cpp  socket.h  tcpb.cpp  tcpb.h  tcpbclient.cpp  tcpbclient.h  tcpbfiles  tcpbinput.cpp  tcpbinput.h  tcpboutput.cpp  tcpboutput.h  terachem_server.pb.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  Makefile  available_test.py  energy_grad_force_test.py  input_test.cpp  mock_server.py  socket_test  socket_test.cpp  tcpb_test.cpp  test_tcpb.py
tests/available/: available_test.cpp  available_test.py
tests/energy_grad_force/: energy_grad_force_test.cpp  h2o.xyz  tc.template
tests/input/: tc.bohr  tc.broken  tc.method  tc.template  water.au  water.xyz
tests/tcpb-client-docker/: Dockerfile
